Uploaded image for project: 'Xerces-C++'
  1. Xerces-C++
  2. XERCESC-1789

trailing whitespace on error messages

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 3.0.0
    • 3.0.0
    • Miscellaneous
    • None
    • debian

    Description

      In testing the beta of xerces-c 3.0.0 using the automated test suite for some code I have that uses it, I noticed that errors returned by xerces::SAXParseException::getMessage() have trailing whitespace that they did not previously have.
      All of my error condition tests failed because of the trailing whitespace on the messages.

      This is trivial to reproduce. Just run samples/SAXPrint on an xml file with an error, such as this one:

      <a>

      This results in the following output:

      <?xml version="1.0" encoding="LATIN1"?>
      <a>

      Fatal Error at file /tmp/a.xml, line 2, char 1
      Message: The input ended before all started tags were ended. Last tag started was 'a'

      but there is an extraneous blank after the end of the message. I will attach the input file (a.xml) and the output file (a.err) so you can see this.

      I left the priority as Major of this, but if it were my project, I'd set it as Blocker – this will have a massive impact on anyone who has automated tests that may include these error messages.

      Attachments

        1. a.err
          0.2 kB
          Jay Berkenbilt
        2. a.xml
          0.0 kB
          Jay Berkenbilt

        Activity

          People

            amassari Alberto Massari
            ejb@ql.org Jay Berkenbilt
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: