- Regenerated message files - Xlat: ICU msgloader was always adding a trailing space to messages (XERCESC-1789) - Xlat: WinRC message file now uses ASCII strings if the message doesn't contain "dangerous" characters

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/trunk@637794 13f79535-47bb-0310-9956-ffa450edef68